test/pos/adt_qual.msmt_
; Sorts
(declare-sort Zob 0)

; Constants




; Uninterpreted Functions


; Qualifiers
(qualif Eq ((v @a0)(x @a0)) (= v x))
(qualif Leq ((v @a0)(x @a0)) (<= v x))

; Well-formedness Constraints
(wf $k0 ((lq_karg$a##k0 Zob)(lq_karg$v##k0 Zob)))

;  Constraints
(constraint (forall ((_VV##1 Zob)(a Zob)) (=> (= _VV##1 a) ($k0 a _VV##1))))
(constraint (forall ((_VV##2 Zob)(a Zob)) (=> ($k0 a _VV##2) (= _VV##2 a))))

