test/neg/test1.msmt_
; Sorts


; Constants




; Uninterpreted Functions


; Qualifiers
(qualif Zog ((v @a0)) (<= 10 v))

; Well-formedness Constraints
(wf $k0 ((lq_karg$v##k0 Int)))

;  Constraints
(constraint (forall ((_VV##1 Int)(x Int)) (=> (and (= x 9) (= _VV##1 x)) ($k0 _VV##1))))
(constraint (forall ((_VV##2 Int)(y Int)) (=> (and (= y 20) (= _VV##2 y)) ($k0 _VV##2))))
(constraint (forall ((_VV##3 Int)(a Int)(v Int)) (=> (and ($k0 v) (= _VV##3 a)) (<= 10 _VV##3))))

